gtkui: Add popup menu for the playlist tab.

--- a/src/gtkui/ui/player.ui
+++ b/src/gtkui/ui/player.ui
@@ -71,7 +71,7 @@
 			<menuitem action="view menu" />
 			<menuitem action="view playlists" />
 			<menuitem action="view infoarea" />
-            <menuitem action="view statusbar" />
+			<menuitem action="view statusbar" />
 		</menu>
 
 		<menu action="help">
@@ -97,6 +97,12 @@
 			<menuitem action="queue toggle" />
 			<separator />
 			<menuitem action="plugins-menu" />
+		</menu>
+		<menu action="dummy" name="playlist-tab-menu">
+			<menuitem action="playlist title edit" />
+			<separator />
+			<menuitem action="playlist delete" />
+			<menuitem action="playlist save" />
 		</menu>
 	</menubar>
 </ui>
