gtkui: Add "Random Order" item.

--- a/src/gtkui/ui/player.ui
+++ b/src/gtkui/ui/player.ui
@@ -45,6 +45,7 @@
 				<separator />
 				<menuitem action="playlist reverse" />
 			</menu>
+			<menuitem action="playlist randomize" />
 			<separator />
 			<menuitem action="playlist refresh" />
 			<separator />
