Backed out changeset f606636c26d7: Bring back "Randomize" item.

--- a/src/skins/ui/playlist.ui
+++ b/src/skins/ui/playlist.ui
@@ -56,6 +56,7 @@
 		<menu action="dummy" name="misc-menu">
 			<menuitem action="plugins-menu" />
 			<separator />
+			<menuitem action="playlist randomize list" />
 			<menuitem action="playlist reverse list" />
 			<separator />
 			<menu action="playlist sort menu">
