gtkui: Add PLAYLIST_SORT_FORMATTED_TITLE.

--- a/src/gtkui/ui/player.ui
+++ b/src/gtkui/ui/player.ui
@@ -42,6 +42,7 @@
 				<menuitem action="playlist sort artist" />
 				<menuitem action="playlist sort album" />
 				<menuitem action="playlist sort path" />
+				<menuitem action="playlist sort formatted title" />
 				<separator />
 				<menuitem action="playlist reverse" />
 			</menu>
