gtkui: Add a setting for whether to scroll when song changes.  Closes: AUD-311.

--- a/src/gtkui/ui/player.ui
+++ b/src/gtkui/ui/player.ui
@@ -75,6 +75,10 @@
 			<menuitem action="view menu" />
 			<menuitem action="view infoarea" />
 			<menuitem action="view statusbar" />
+			<separator />
+			<menuitem action="playlist show headers" />
+			<menuitem action="playlist choose columns" />
+			<menuitem action="playlist autoscroll" />
 		</menu>
 
 		<menu action="help">
@@ -102,9 +106,6 @@
 			<menuitem action="queue toggle" />
 			<separator />
 			<menuitem action="plugins-menu" />
-			<separator />
-			<menuitem action="playlist show headers" />
-			<menuitem action="playlist choose columns" />
 		</menu>
 		<menu action="dummy" name="playlist-tab-menu">
 			<menuitem action="playlist title edit" />
