Add queue manage item to (second) playlist menu in skinned interface. Closes: AUD-382.

--- a/src/skins/ui/mainwin.ui
+++ b/src/skins/ui/mainwin.ui
@@ -94,6 +94,7 @@
 				<menuitem action="playlist save" />
 				<separator />
 				<menuitem action="playlist manager" />
+				<menuitem action="queue manager" />
 				<separator />
 				<menuitem action="playlist refresh" />
 			</menu>
