--- a/src/qtui/main_window.ui
+++ b/src/qtui/main_window.ui
@@ -56,8 +56,8 @@
    </attribute>
    <addaction name="actionSearch"/>
    <addaction name="separator"/>
-   <addaction name="actionOpen"/>
-   <addaction name="actionAdd"/>
+   <addaction name="actionOpenFiles"/>
+   <addaction name="actionAddFiles"/>
    <addaction name="separator"/>
    <addaction name="actionPlayPause"/>
    <addaction name="actionStop"/>
@@ -68,6 +68,72 @@
    <addaction name="actionAudioVolume"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>800</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>File</string>
+    </property>
+    <addaction name="actionOpenFiles"/>
+    <addaction name="actionOpenURL"/>
+    <addaction name="actionAddFiles"/>
+    <addaction name="actionAddURL"/>
+   </widget>
+   <widget class="QMenu" name="menuPlayback">
+    <property name="title">
+     <string>Playback</string>
+    </property>
+    <addaction name="actionPlayPause"/>
+    <addaction name="actionStop"/>
+    <addaction name="actionNext"/>
+    <addaction name="actionPrevious"/>
+    <addaction name="separator"/>
+    <addaction name="actionRepeat"/>
+    <addaction name="actionShuffle"/>
+    <addaction name="actionNoPlaylistAdvance"/>
+    <addaction name="actionStopAfterThisSong"/>
+    <addaction name="separator"/>
+    <addaction name="actionSongInfo"/>
+    <addaction name="actionJumpToTime"/>
+    <addaction name="separator"/>
+    <addaction name="actionSetRepeatPointA"/>
+    <addaction name="actionSetRepeatPointB"/>
+    <addaction name="actionClearRepeatPoints"/>
+   </widget>
+   <widget class="QMenu" name="menuPlaylist">
+    <property name="title">
+     <string>Playlist</string>
+    </property>
+   </widget>
+   <widget class="QMenu" name="menuServices">
+    <property name="title">
+     <string>Services</string>
+    </property>
+   </widget>
+   <widget class="QMenu" name="menuOutput">
+    <property name="title">
+     <string>Output</string>
+    </property>
+   </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+   </widget>
+   <addaction name="menuFile"/>
+   <addaction name="menuPlayback"/>
+   <addaction name="menuPlaylist"/>
+   <addaction name="menuServices"/>
+   <addaction name="menuOutput"/>
+   <addaction name="menuView"/>
+  </widget>
   <action name="actionSearch">
    <property name="checkable">
     <bool>true</bool>
@@ -84,30 +150,33 @@
     <string>Search Tool</string>
    </property>
   </action>
-  <action name="actionOpen">
+  <action name="actionOpenFiles">
    <property name="icon">
     <iconset theme="document-open">
      <normaloff/>
     </iconset>
    </property>
    <property name="text">
-    <string>Open</string>
+    <string>Open Files</string>
    </property>
    <property name="toolTip">
-    <string>Open files</string>
+    <string>Open Files</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+O</string>
    </property>
   </action>
-  <action name="actionAdd">
+  <action name="actionAddFiles">
    <property name="icon">
     <iconset theme="list-add">
      <normaloff/>
     </iconset>
    </property>
    <property name="text">
-    <string>Add</string>
+    <string>Add Files</string>
    </property>
-   <property name="toolTip">
-    <string>Add files</string>
+   <property name="shortcut">
+    <string>Ctrl+Shift+O</string>
    </property>
   </action>
   <action name="actionPlayPause">
@@ -117,10 +186,13 @@
     </iconset>
    </property>
    <property name="text">
-    <string>PlayPause</string>
+    <string>Play / Pause</string>
    </property>
    <property name="toolTip">
     <string>Play / Pause</string>
+   </property>
+   <property name="shortcut">
+    <string>Space</string>
    </property>
   </action>
   <action name="actionStop">
@@ -135,6 +207,9 @@
    <property name="toolTip">
     <string>Stop playback</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+.</string>
+   </property>
   </action>
   <action name="actionPrevious">
    <property name="icon">
@@ -147,6 +222,9 @@
    </property>
    <property name="toolTip">
     <string>Previous track</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Left</string>
    </property>
   </action>
   <action name="actionNext">
@@ -161,6 +239,9 @@
    <property name="toolTip">
     <string>Next track</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+Right</string>
+   </property>
   </action>
   <action name="actionRepeat">
    <property name="checkable">
@@ -173,6 +254,9 @@
    </property>
    <property name="text">
     <string>Repeat</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+R</string>
    </property>
   </action>
   <action name="actionShuffle">
@@ -187,6 +271,9 @@
    <property name="text">
     <string>Shuffle</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+S</string>
+   </property>
   </action>
   <action name="actionAudioVolume">
    <property name="icon">
@@ -199,6 +286,69 @@
    </property>
    <property name="toolTip">
     <string>Audio Volume</string>
+   </property>
+  </action>
+  <action name="actionOpenURL">
+   <property name="text">
+    <string>Open URL</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+U</string>
+   </property>
+  </action>
+  <action name="actionAddURL">
+   <property name="text">
+    <string>Add URL</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+U</string>
+   </property>
+  </action>
+  <action name="actionNoPlaylistAdvance">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>No Playlist Advance</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+N</string>
+   </property>
+  </action>
+  <action name="actionStopAfterThisSong">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Stop After This Song</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+S</string>
+   </property>
+  </action>
+  <action name="actionSongInfo">
+   <property name="text">
+    <string>Song Info</string>
+   </property>
+  </action>
+  <action name="actionJumpToTime">
+   <property name="text">
+    <string>Jump To Time</string>
+   </property>
+  </action>
+  <action name="actionSetRepeatPointA">
+   <property name="text">
+    <string>Set Repeat Point A</string>
+   </property>
+  </action>
+  <action name="actionSetRepeatPointB">
+   <property name="text">
+    <string>Set Repeat Point B</string>
+   </property>
+  </action>
+  <action name="actionClearRepeatPoints">
+   <property name="text">
+    <string>Clear Repeat Points</string>
    </property>
   </action>
  </widget>
