qtui: Prevent hiding the toolbar.

--- a/src/qtui/main_window.ui
+++ b/src/qtui/main_window.ui
@@ -37,6 +37,9 @@
    </layout>
   </widget>
   <widget class="QToolBar" name="toolBar">
+   <property name="contextMenuPolicy">
+    <enum>Qt::PreventContextMenu</enum>
+   </property>
    <property name="movable">
     <bool>false</bool>
    </property>
